added googel Auth

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://admin:SA0jH1UWp4A4uane@crossroads.3gojy.mongodb.net/crossroads_db?retryWrites=true&w=majority&appName=CrossRoads
 JWT_SECRET=supersecretkey
 REFRESH_TOKEN_SECRET=anothersecretkey
+GOOGLE_CLIENT_ID=889345019357-b3khvks4r83o9d73si6368rcin9ga23b.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
