--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
