--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ GOOGLE_CLIENT_ID=889345019357-b3khvks4r83o9d73si6368rcin9ga23b.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 SMTP_USER=codebench.services@gmail.com
 SMTP_PASSWORD=zvao xzai inpy xudk
-; AWS_S3_ACCESS_KEY=AKIAVVZPCVLRJZAFG4LD
-; AWS_S3_SECRET=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
-; AWS_S3_BUCKET=healbetter
-; AWS_S3_REGION=ap-southeast-2
+AWS_S3_ACCESS_KEY=AKIAVVZPCVLRJZAFG4LD
+AWS_S3_SECRET=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
+AWS_S3_BUCKET=healbetter
+AWS_S3_REGION=ap-southeast-2
