--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   },
